--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "homebridge-garagedoor-ryobi",
   "version": "0.1.0",
-  "description": "Ryobi Garage Door plugin for homebridge: https://github.com/nfarina/homebridge",
-  "license": "ISC",
-  "keywords": [
-    "homebridge-plugin",
-    "garage",
-    "garage-door",
-    "ryobi"
-  ],
-  "engines": {
-    "node": ">=0.12.0",
-    "homebridge": ">=0.2.0"
-  },
-  "author": {
-    "name": "Russ Sonnenschein"
+  "description": "ryobi garagedoor (GDO) pluging for homebridge",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/knuckleheadsmiff/homebridge-garagedoor-ryobi.git"
+    "url": "git://knuckleheadsmiff/homebridge-garagedoor-ryobi"
   },
-  "dependencies": {
-      "ws": "^7.1.2"
-  }
+  "keywords": [
+    "homekit",
+    "homebridge",
+    "GDO",
+    "ryobi",
+    "garage",
+    "roo",
+    "garagedoor",
+    "GDO",
+    "opener"
+  ],
+  "author": "Russell Sonnenschein",
+  "license": "ISC"
 }
