--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "homebridge-garagedoor-ryobi",
-  "version": "0.1.1",  
-  "description": "ryobi garagedoor (GDO) pluging for homebridge",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "name": "homebridge-garagedoor-ryobi",
+    "version": "0.1.2",
+    "description": "Ryobi Garage Door plugin for homebridge: https://github.com/nfarina/homebridge",
+    "license": "ISC",
 
   "repository": {
     "type": "git",
-    "url": "git://knuckleheadsmiff/homebridge-garagedoor-ryobi"
+    "url": "git://github.com/knuckleheadsmiff/homebridge-garagedoor-ryobi.git"
+  },
+  "dependencies": {
+      "debug": "^2.6.9",
+      "request": "^2.88.0",
+      "ws": "^7.1.2"
   },
   "keywords": [
-    "homekit",
-    "homebridge",
-    "homebridge-plugin",
-    "GDO",
-    "ryobi",
-    "garage",
-    "roo",
-    "garagedoor",
-    "GDO",
-    "opener"
+      "homebridge-plugin",
+      "garage",
+      "garage-door",
+      "ryobi"
   ],
   "engines": {
       "node": ">=0.12.0",
