--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "url": "git://github.com/knuckleheadsmiff/homebridge-garagedoor-ryobi.git"
   },
   "dependencies": {
-    "debug": "^2.6.9",
-    "request": "^2.88.0",
-    "ws": "^7.1.2"
+    "node-fetch": "^2.6.1",
+    "ws": "^7.4.4"
   },
   "keywords": [
     "homebridge-plugin",
@@ -31,6 +30,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
+    "@types/node-fetch": "^2.5.10",
+    "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
