--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "rootDir": "./src",
       "strict": true,
       "esModuleInterop": true,
-      "noImplicitAny": false
+      "noImplicitAny": true,
+      "strictNullChecks": true
     },
     "include": [
       "src/"
