--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-garagedoor-ryobi",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Ryobi Garage Door plugin for homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "repository": {
@@ -26,16 +26,23 @@
     "lint": "eslint src/**.ts --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
+    "test": "jest",
     "prepublishOnly": "npm run lint && npm run build"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.31",
     "@types/node-fetch": "^2.5.10",
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.21.0",
     "homebridge": "^1.3.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
