fix test directory in tsconfig.json
changed to ../tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "noImplicitAny": true,
     "strictNullChecks": true
   },
-  "include": ["src/", "tests/"],
+  "include": ["src/", "../tests/"],
   "exclude": ["**/*.spec.ts"]
 }
